Fix double border issue

--- a/styles/coin.module.less
+++ b/styles/coin.module.less
@@ -104,6 +104,7 @@
   cursor: pointer;
   box-shadow: none;
   border: 1px solid var(--cr-primary-border);
+  border-bottom: 0;
 
   &.active {
     background-color: var(--cr-secondary-bg);
@@ -190,8 +191,6 @@
 }
 
 .sectionOnline {
-  box-shadow: 1px 0 0 0 var(--cr-primary-border), 0 0px 0 0 var(--cr-primary-border), 1px 0px 0 0 var(--cr-primary-border), 1px 0 0 0 var(--cr-primary-border) inset, 0 0px 0 0 var(--cr-primary-border) inset !important;
-
   @media screen and (max-width: @screen-md) {
     width: 100%;
   }
